DIAC-103 connecting and turning on fortify (#340)